# alexandrie

./: Cargo.toml  database-layout.html  getting-started.html  index.html  introduction.html  print.html  searchindex.js  searchindex.json
alexandrie/: Cargo.toml
alexandrie-index/: Cargo.toml
alexandrie-index/src/: cli.rs  git2.rs  lib.rs  tree.rs
alexandrie-index/src/config/: git2.rs
alexandrie-rendering/: Cargo.toml
alexandrie-rendering/src/: lib.rs
alexandrie-storage/: Cargo.toml
alexandrie-storage/src/: disk.rs  lib.rs
alexandrie/src/: error.rs  main.rs
alexandrie/src/api/: download.rs  publish.rs  search.rs  unyank.rs  yank.rs
alexandrie/src/config/: mod.rs
alexandrie/src/frontend/: krate.rs  last_updated.rs  most_downloaded.rs  search.rs
alexandrie/src/utils/: mod.rs
concepts/: crate-index.html  crate-storage.html  mod.html
src/: main.rs
src/api/: mod.rs  search.rs
src/api/crates/: publish.rs
src/frontend/account/: register.rs
src/utils/: rendering.rs
templates/: crate.hbs  index.hbs  last-updated.hbs  most-downloaded.hbs  search.hbs
templates/account/: manage.hbs
templates/partials/: head.hbs  navbar.hbs
whats-available/: crate-stores.html  docker.html  index-management-strategies.html  mod.html
